# fastapi-demo

./: .gitignore  Makefile  README.md  pyproject.toml
app/: main.py
app/models/: item.py
fastapi_demo/: main.py
